[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
anyhow = "1.0.69"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.12.0"
regex = "1"
lazy_static = "1.4.0"
num = "0.4.0"
pathfinding = "4.2.1"
serde_json = "1.0"
permutator = "0.4.3"
memoize = "0.4.0"
thiserror = "1.0.38"
rayon = "1.7.0"
indicatif = "0.17.3"
gauss_jordan_elimination = { version = "0.2.0", features = ["generic_calculation"] }
